Fixes issue #38 due date line, alignment

--- a/themes/phoenix/less/item-record.less
+++ b/themes/phoenix/less/item-record.less
@@ -205,7 +205,10 @@ dl {
 .text-success, .text-danger, {
   font-size: 1.1em;
   padding-right: 1.2em;
-  display: block;
+}
+
+span.service-links {
+    display: block;
 }
 
 .text-unknown {
